--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,12 @@ dependencies:
     sdk: flutter
   get_it: ^7.2.0
   injectable: ^1.5.3
-
+  flutter_native_splash: ^2.2.6
   cupertino_icons: ^1.0.2
+
+flutter_native_splash:
+  image: assets/icon/1024x1024_Logo.png
+  color: "#fcf6f3"
 
 dev_dependencies:
   flutter_test:
@@ -30,8 +34,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/icon/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
